# xllm-handbook

./: AGENTS.md  CMakeLists.txt  CMakeLists_standalone.txt  CMakeLists_standalone_fixed.txt  CONTINUATION_PLAN.md  DELIVERY_REPORT.txt  EXECUTIVE_SUMMARY.md  FINAL_ACHIEVEMENT_REPORT.md  FINAL_DELIVERY.md  FINAL_STATUS.md  FINAL_STATUS_98.md  GOAL_ACHIEVED.md  IMPLEMENTATION_COMPLETE.md  PROJECT_COMPLETE_100.md  PROJECT_STATUS.md  SPACEMIT_README.md  auto_ssh.exp  build_spacemit.sh  check_k3_status.py  deploy_standalone.py  deploy_to_k3.py  deploy_to_k3.sh  download_and_test.py  final_build.py  final_report.md  final_verification.sh  poc_test.py  progress.md  quick_deploy.py  quick_test.sh  run_inference_k3.py  simple_compile_test.sh  ssh_test.py  test_ssh.sh  verify_integration.py  wait_build.py
.plan/: spacemit-a-plus-plus-implementation.md
cmake/: spacemit.cmake
docs/: README-spacemit.md  spacemit-a-plus-plus-implementation-summary.md  spacemit-cmake-config.md  spacemit-ggml-integration-analysis.md  spacemit-implementation-checklist.md  spacemit-k3-adaptation-index.md  spacemit-k3-adaptation-part1.md  spacemit-k3-adaptation-part2.md  spacemit-k3-adaptation-part3.md  spacemit-k3-adaptation-part4.md  spacemit-k3-adaptation-summary.md  spacemit-performance-analysis.md  spacemit-plan-a-plus-gguf-loader.md  (+2 more)
spacemit_test/: CMakeLists.txt
spacemit_test/kernels_spacemit/: matmul_ggml.cpp  rms_norm_ggml.cpp  spacemit_ops.h
spacemit_test/platform_spacemit/: ggml_backend.cpp  ggml_backend.h  ggml_bridge.cpp
spacemit_test/test_kernels/: test_spacemit_ops.cpp
(+34 files in other folders)
